[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ResHeader.gd" type="Script" id=1]
[ext_resource path="res://fonts/F_RESOURCES_UI.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Interface/panel1_small.png" type="Texture" id=3]
[ext_resource path="res://assets/ui_recs.png" type="Texture" id=4]

[node name="ResHeader" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_bottom = 80.0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -246.0
margin_top = -9.0
margin_bottom = 66.0
alignment = 1

[node name="Res1" type="NinePatchRect" parent="HBox"]
margin_left = 17.0
margin_right = 67.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 75 )
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="HBox/Res1"]
position = Vector2( 26, 28 )
texture = ExtResource( 4 )
hframes = 4
vframes = 3

[node name="Label" type="Label" parent="HBox/Res1"]
margin_left = 3.0
margin_top = 42.0
margin_right = 46.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1

[node name="Res2" type="NinePatchRect" parent="HBox"]
margin_left = 71.0
margin_right = 121.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 75 )
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="HBox/Res2"]
position = Vector2( 26, 28 )
texture = ExtResource( 4 )
hframes = 4
vframes = 3
frame = 1

[node name="Label" type="Label" parent="HBox/Res2"]
margin_left = 3.0
margin_top = 42.0
margin_right = 46.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1

[node name="Res3" type="NinePatchRect" parent="HBox"]
margin_left = 125.0
margin_right = 175.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 75 )
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="HBox/Res3"]
position = Vector2( 26, 28 )
texture = ExtResource( 4 )
hframes = 4
vframes = 3
frame = 2

[node name="Label" type="Label" parent="HBox/Res3"]
margin_left = 3.0
margin_top = 42.0
margin_right = 46.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1

[node name="Res4" type="NinePatchRect" parent="HBox"]
margin_left = 179.0
margin_right = 229.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 75 )
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="HBox/Res4"]
position = Vector2( 26, 28 )
texture = ExtResource( 4 )
hframes = 4
vframes = 3
frame = 4

[node name="Label" type="Label" parent="HBox/Res4"]
margin_left = -4.0
margin_top = 38.0
margin_right = 39.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1

[node name="Label3" type="Label" parent="HBox/Res4"]
margin_left = 14.0
margin_top = 49.0
margin_right = 57.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "10"
align = 1

[node name="Label2" type="Label" parent="HBox/Res4"]
margin_left = 9.0
margin_top = 37.0
margin_right = 52.0
margin_bottom = 65.0
rect_rotation = 16.1539
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "/"
align = 1
